fea and implicit

--- a/1_Surface_Lattice_basics.ipynb
+++ b/1_Surface_Lattice_basics.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "{u'message': u'surface_10by10_ceil.obj uploaded to test@test.com/surface_10by10_ceil.obj'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 1.0, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"connectPt\": 0}')\n",
+      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.5, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"connectPt\": 0}')\n",
       "('response: ', u'[\"cell_0.obj\"]')\n",
       "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIU.U892JiUy\n"
      ]
@@ -82,7 +82,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f931cfc6450>"
+       "<IPython.lib.display.IFrame at 0x7f6668a781d0>"
       ]
      },
      "metadata": {},
@@ -94,7 +94,7 @@
        "'https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIU.U892JiUy'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
     "# generate a pametric lattice unit\n",
     "# the case parameter represent differenct topology of unit (0~7) \n",
     "# the rest of parameters control the shape of units, ranging from 0.0 to 1.0\n",
-    "genysis.genLatticeUnit(case=2,chamfer=0,centerChamfer=0,bendIn=1.0,cBendIn=0,connectPt=0,output=\"cell_0.obj\",token=t)\n",
+    "genysis.genLatticeUnit(case=2,chamfer=0,centerChamfer=0,bendIn=0.5,cBendIn=0,connectPt=0,output=\"cell_0.obj\",token=t)\n",
     "genysis.visualize(\"cell_0.obj\",t,True,300,300)"
    ]
   },
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"autoScale\": true, \"EPSILON\": 0.01, \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines4.obj\", \"blendTargets\": [], \"base\": \"surface_10by10.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"ceil\": \"surface_10by10_ceil.obj\", \"cellHeight\": 1}')\n",
+      "('request: ', '{\"autoScale\": true, \"EPSILON\": 0.01, \"component\": \"cell_0.obj\", \"filename\": \"surface_lattice_lines4.obj\", \"blendTargets\": [], \"base\": \"surface_10by10.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"ceil\": \"surface_10by10_ceil.obj\", \"cellHeight\": 1}')\n",
       "('response: ', u'[\"surface_lattice_lines4.obj\"]')\n",
       "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=eyJhbGciOiJIU.U892JiUy\n"
      ]
@@ -363,7 +363,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f931c542e10>"
+       "<IPython.lib.display.IFrame at 0x7f76bce4d210>"
       ]
      },
      "metadata": {},
@@ -375,7 +375,7 @@
        "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=eyJhbGciOiJIU.U892JiUy'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
     "sl = genysis.surfaceLattice()\n",
     "sl.setSurface(\"surface_10by10.obj\")\n",
     "sl.setTopSurface(\"surface_10by10_ceil.obj\")\n",
-    "sl.setComponent(\"cell_1.obj\")\n",
+    "sl.setComponent(\"cell_0.obj\")\n",
     "sl.setOutput(\"surface_lattice_lines4.obj\")\n",
     "sl.run(t)\n",
     "genysis.visualize(\"surface_lattice_lines4.obj\",t,True)"
