--- a/4_Stochastic_Lattice_hip-implant.ipynb
+++ b/4_Stochastic_Lattice_hip-implant.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to GENYSIS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import library and assign your token\n",
     "import genysis\n",
@@ -93,7 +85,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1480220410>"
+       "<IPython.lib.display.IFrame at 0x7fdd77e78390>"
       ]
      },
      "metadata": {},
@@ -120,7 +112,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f14802202d0>"
+       "<IPython.lib.display.IFrame at 0x7fdd77e78510>"
       ]
      },
      "metadata": {},
@@ -145,18 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input2\": \"bipolar_head2.obj\", \"engine\": \"carve\", \"input1\": \"bipolar_head1.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"bipolar_head_lattice_region.obj\", \"operation\": \"intersection\"}')\n",
+      "('request: ', '{\"input2\": \"bipolar_head2.obj\", \"engine\": \"carve\", \"input1\": \"bipolar_head1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"output\": \"bipolar_head_lattice_region.obj\", \"operation\": \"intersection\"}')\n",
       "('response: ', u'[\"bipolar_head_lattice_region.obj\"]')\n",
-      "('request: ', '{\"input2\": \"bipolar_head2.obj\", \"engine\": \"carve\", \"input1\": \"bipolar_head1.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"bipolar_head_solid_region.obj\", \"operation\": \"difference\"}')\n",
+      "('request: ', '{\"input2\": \"bipolar_head2.obj\", \"engine\": \"carve\", \"input1\": \"bipolar_head1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"output\": \"bipolar_head_solid_region.obj\", \"operation\": \"difference\"}')\n",
       "('response: ', u'[\"bipolar_head_solid_region.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
      ]
     },
     {
@@ -166,14 +158,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f148020ee90>"
+       "<IPython.lib.display.IFrame at 0x7fa0370d4350>"
       ]
      },
      "metadata": {},
@@ -183,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
      ]
     },
     {
@@ -193,14 +185,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f148020ee50>"
+       "<IPython.lib.display.IFrame at 0x7fa025f69ed0>"
       ]
      },
      "metadata": {},
@@ -209,10 +201,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,26 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"volume\": \"bipolar_head_lattice_region.obj\", \"poreSize\": 1.0, \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"filename\": \"bipolar_head_lattice_lines.obj\"}')\n",
+      "('request: ', '{\"volume\": \"bipolar_head_lattice_region.obj\", \"poreSize\": 1.0, \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"filename\": \"bipolar_head_lattice_lines.obj\"}')\n",
       "('response: ', u'[\"bipolar_head_lattice_lines.obj\"]')\n",
       "Click on URL to visualize\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,26 +284,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"resolution\": 300, \"memberThickness\": 0.2, \"lines\": \"bipolar_head_lattice_lines.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"filename\": \"bipolar_head_lattice_meshed.obj\"}')\n",
+      "('request: ', '{\"resolution\": 300, \"memberThickness\": 0.2, \"lines\": \"bipolar_head_lattice_lines.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"filename\": \"bipolar_head_lattice_meshed.obj\"}')\n",
       "('response: ', u'[\"bipolar_head_lattice_meshed.obj\"]')\n",
       "Click on URL to visualize\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_meshed.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_meshed.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_meshed.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_meshed.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
