--- a/9_Use_Cases_midsole.ipynb
+++ b/9_Use_Cases_midsole.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"surfaces\": \"sole_example.json\", \"filename\": \"grid_example.json\", \"u\": 50, \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"w\": 5, \"v\": 6}')\n",
+      "('request: ', '{\"surfaces\": \"sole_example.json\", \"bottom\": null, \"top\": null, \"filename\": \"grid_example.json\", \"u\": 20, \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"w\": 3, \"v\": 6, \"side2\": null, \"side1\": null}')\n",
       "('response: ', u'[\"grid_example.json\"]')\n",
       "https://studiobitonti.appspot.com/apps/visualize?name=grid_example.json&t=eyJhbGciOiJIU.U892JiUy\n"
      ]
@@ -89,7 +89,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4ea4d1bd90>"
+       "<IPython.lib.display.IFrame at 0x7f8fc9dcee10>"
       ]
      },
      "metadata": {},
@@ -101,7 +101,7 @@
        "'https://studiobitonti.appspot.com/apps/visualize?name=grid_example.json&t=eyJhbGciOiJIU.U892JiUy'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
     "conformalLattice.setEPSILON(0.1) # a tolerance value to join and clean up small lines\n",
     "\n",
     "conformalLattice.setSurfaces(\"sole_example.json\") # input volume surfaces defination \n",
-    "conformalLattice.setUVW(50,6,5) # uvw resolution for conformal grid\n",
+    "conformalLattice.setUVW(20,6,3) # uvw resolution for conformal grid\n",
     "conformalLattice.setGridOutput(\"grid_example.json\") # output file name\n",
     "conformalLattice.genGrid(t) # call the api to generate the grid\n",
     "\n",
