fea band example

--- a/1_Surface_Lattice_basics.ipynb
+++ b/1_Surface_Lattice_basics.ipynb
@@ -17,29 +17,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to GENYSIS\n",
-      "('uploading file size:', 0.004, 'MB')\n",
-      "[======================================================]108%\n",
-      "successfully uploaded models/surface_10by10.obj as surface_10by10.obj\n",
-      "('uploading file size:', 0.004, 'MB')\n",
-      "[======================================================]108%\n",
-      "successfully uploaded models/surface_10by10_ceil.obj as surface_10by10_ceil.obj\n"
+      "('uploading file size:', 0.006, 'MB')\n",
+      "[====================================================]105%\n",
+      "successfully uploaded models/surface1.stp as surface1.stp\n",
+      "('uploading file size:', 0.006, 'MB')\n",
+      "[====================================================]105%\n",
+      "successfully uploaded models/surface2.stp as surface2.stp\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp,surface2.stp&t=Space0ut!\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp,surface2.stp&t=Space0ut!\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
       "text/plain": [
-       "{u'message': u'surface_10by10_ceil.obj uploaded to test@test.com/surface_10by10_ceil.obj'}"
+       "<IPython.lib.display.IFrame at 0x7f497ed7ec10>"
       ]
      },
-     "execution_count": 2,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp,surface2.stp&t=Space0ut!'"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,25 +67,84 @@
    "source": [
     "# install genysis library with: pip install genysis\n",
     "import genysis\n",
-    "t = \"eyJhbGciOiJIU.U892JiUy\" # replace with your valid token\n",
+    "t = \"Space0ut!\" # replace with your valid token\n",
     "\n",
     "# upload files to be used in this demo\n",
-    "genysis.upload(\"models/surface_10by10.obj\",\"surface_10by10.obj\",t)\n",
-    "genysis.upload(\"models/surface_10by10_ceil.obj\",\"surface_10by10_ceil.obj\",t)"
+    "genysis.upload(\"models/surface1.stp\",\"surface1.stp\",t)\n",
+    "genysis.upload(\"models/surface2.stp\",\"surface2.stp\",t)\n",
+    "genysis.visualize([\"surface1.stp\",\"surface2.stp\"],t,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.5, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"connectPt\": 0}')\n",
+      "('request: ', '{\"surfaces\": \"surface1.stp\", \"div_U\": 10, \"div_V\": 10, \"t\": \"Space0ut!\", \"output\": \"temp.json\", \"height\": 2.5}')\n",
+      "('response: ', u'[\"temp.json\"]\\n')\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f497c19e610>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# array the generated lattice unit to a surface mesh with 10x10 grid\n",
+    "# please note the input surface has to be composed only by quad faces, triangle faces will be ignored\n",
+    "sl = genysis.surfaceLattice()\n",
+    "sl.setSurfaces(\"surface1.stp\")\n",
+    "sl.setDivision(u=10,v=10)\n",
+    "sl.setHeight(2.5)\n",
+    "# sl.setGridOutput(\"\")\n",
+    "sl.genGrid(t)\n",
+    "\n",
+    "genysis.visualize(sl.gridOutput,t,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.5, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"Space0ut!\", \"connectPt\": 0}')\n",
       "('response: ', u'[\"cell_0.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -75,14 +154,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f6668a781d0>"
+       "<IPython.lib.display.IFrame at 0x7ff00453bf90>"
       ]
      },
      "metadata": {},
@@ -91,10 +170,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"autoScale\": true, \"EPSILON\": 0.01, \"component\": \"cell_0.obj\", \"filename\": \"surface_lattice_lines1.obj\", \"blendTargets\": [], \"base\": \"surface_10by10.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"ceil\": null, \"cellHeight\": 2}')\n",
+      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_0.obj\", \"filename\": \"surface_lattice_lines1.obj\", \"blendTargets\": [], \"boxes\": \"temp.json\", \"t\": \"Space0ut!\"}')\n",
       "('response: ', u'[\"surface_lattice_lines1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -128,14 +207,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f931cfc6550>"
+       "<IPython.lib.display.IFrame at 0x7f496e777190>"
       ]
      },
      "metadata": {},
@@ -144,10 +223,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,14 +234,119 @@
    "source": [
     "# array the generated lattice unit to a surface mesh with 10x10 grid\n",
     "# please note the input surface has to be composed only by quad faces, triangle faces will be ignored\n",
-    "sl = genysis.surfaceLattice()\n",
-    "sl.setSurface(\"surface_10by10.obj\")\n",
-    "sl.setCellHeight(2)\n",
     "sl.setComponent(\"cell_0.obj\")\n",
     "sl.setOutput(\"surface_lattice_lines1.obj\")\n",
-    "sl.run(t)\n",
-    "\n",
+    "sl.populateLattice(t)\n",
     "genysis.visualize(\"surface_lattice_lines1.obj\",t,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('request: ', '{\"surfaces\": \"surface1.stp\", \"div_U\": 10, \"div_W\": 3, \"height\": 7.5, \"t\": \"Space0ut!\", \"output\": \"temp.json\", \"div_V\": 10}')\n",
+      "('response: ', u'[\"temp.json\"]\\n')\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f496de72850>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sl = genysis.surfaceLattice()\n",
+    "sl.setSurfaces(\"surface1.stp\")\n",
+    "sl.setDivision(u=10,v=10,w = 3)\n",
+    "sl.setHeight(7.5)\n",
+    "sl.genGrid(t)\n",
+    "\n",
+    "genysis.visualize(sl.gridOutput,t,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_0.obj\", \"filename\": \"surface_lattice_lines2.obj\", \"blendTargets\": [], \"boxes\": \"temp.json\", \"t\": \"Space0ut!\"}')\n",
+      "('response: ', u'[\"surface_lattice_lines2.obj\"]')\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=Space0ut!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=Space0ut!\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f496de72810>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=Space0ut!'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sl.setComponent(\"cell_0.obj\")\n",
+    "sl.setOutput(\"surface_lattice_lines2.obj\")\n",
+    "sl.populateLattice(t)\n",
+    "genysis.visualize(\"surface_lattice_lines2.obj\",t,True)"
    ]
   },
   {
